feat:created production ready dataset

--- a/notebooks/eda_processing.ipynb
+++ b/notebooks/eda_processing.ipynb
@@ -338,6 +338,211 @@
    "source": [
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ebab6876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Product\n",
+       "Credit reporting or other personal consumer reports                             4834855\n",
+       "Credit reporting, credit repair services, or other personal consumer reports    2163857\n",
+       "Debt collection                                                                  799197\n",
+       "Mortgage                                                                         422254\n",
+       "Checking or savings account                                                      291178\n",
+       "Credit card                                                                      226686\n",
+       "Credit card or prepaid card                                                      206369\n",
+       "Money transfer, virtual currency, or money service                               145066\n",
+       "Credit reporting                                                                 140429\n",
+       "Student loan                                                                     109717\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Product\"].value_counts().head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1728eda5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6574170, 18)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TARGET_PRODUCTS = [\n",
+    "    \"Credit reporting or other personal consumer reports\",\n",
+    "    \"Debt collection\",\n",
+    "    \"Mortgage\",\n",
+    "    \"Checking or savings account\",\n",
+    "    \"Credit card\"\n",
+    "]\n",
+    "\n",
+    "filtered_df = df[df[\"Product\"].isin(TARGET_PRODUCTS)].copy()\n",
+    "filtered_df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b6399ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.7294753558243854)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df[\"Consumer complaint narrative\"].isna().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "73ce3d1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1778475, 18)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = filtered_df[\n",
+    "    filtered_df[\"Consumer complaint narrative\"].notna()\n",
+    "].copy()\n",
+    "\n",
+    "filtered_df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e3788670",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1.778475e+06\n",
+       "mean     1.781718e+02\n",
+       "std      2.363775e+02\n",
+       "min      1.000000e+00\n",
+       "25%      5.700000e+01\n",
+       "50%      1.150000e+02\n",
+       "75%      2.150000e+02\n",
+       "max      6.469000e+03\n",
+       "Name: n_words, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df[\"n_words\"] = filtered_df[\"Consumer complaint narrative\"].apply(\n",
+    "    lambda x: len(x.split())\n",
+    ")\n",
+    "\n",
+    "filtered_df[\"n_words\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f8e31536",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1631448, 19)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MIN_WORDS = 30\n",
+    "\n",
+    "clean_df = filtered_df[filtered_df[\"n_words\"] >= MIN_WORDS].copy()\n",
+    "clean_df.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "238c9107",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1.631448e+06\n",
+       "mean     1.924762e+02\n",
+       "std      2.417254e+02\n",
+       "min      3.000000e+01\n",
+       "25%      6.900000e+01\n",
+       "50%      1.270000e+02\n",
+       "75%      2.300000e+02\n",
+       "max      6.469000e+03\n",
+       "Name: n_words, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"n_words\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "274b2c14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUTPUT_PATH = \"../data/processed/complaints_clean.csv\"\n",
+    "clean_df.to_csv(OUTPUT_PATH, index=False)"
+   ]
   }
  ],
  "metadata": {
